-
Bug
-
Resolution: Done
-
P2: Important
-
5.2.0 RC1
-
None
-
OS X 10.9, Qt 5.2.0-rc1
-
-
2f76a30ee18b5a7938e0c7a7be0a816f139fbc7a
The attached program that creates a simple QGLWidget and shows it indicates that there is a problem on OS X if we do not set an initial size for the widget.
If we set a size all is fine and works and we get a valid current context in initializeGL() and friends.
However, if we comment out the resize() line in main.cpp, then when we call show() on the widget we get an "Invalid drawable" error and the context fails to be made current. This results in no context available inside of initializeGL() and friends, rendering them useless.
The work around is to ensure that we call resize() before show()ing the widget.
I suspect that the cocoa QPA plugin is trying to create a native window surface with an invalid size in the problematic case.
- relates to
-
QTBUG-31451 QGLWidget creation with parent triggers warning/crash
-
- Closed
-
For Gerrit Dashboard: QTBUG-35342 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
197410,1 | macOS: Remove "Invalid Drawable" GL warning workaround | dev | qt/qtbase | Status: ABANDONED | 0 | 0 |