Cocoa: Prevent "Invalid Drawable" GL warnings.

Worst case this can cause the various OpenGL
initialization functions to fail due to the lack
of a valid GL context.

Task-number: QTBUG-35342
Task-number: QTBUG-31451

Change-Id: I08256ad51acb5370c8c6d44b556572eadd6a9c1d
Reviewed-by: Sean Harmer <sean.harmer@kdab.com>